--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.3.0
+astroid==2.3.3
 Babel==2.7.0
 blinker==1.4
 Click==7.0
+colorama==0.4.3
 dominate==2.4.0
 Flask==1.1.1
 Flask-Admin==1.5.4
@@ -11,6 +13,7 @@ Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Markdown==0.3
 Flask-Migrate==2.5.2
+Flask-Moment==0.9.0
 Flask-OAuth==0.12
 Flask-Principal==0.4.0
 Flask-Script==2.0.6
@@ -22,14 +25,18 @@ Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 httplib2==0.14.0
 humanize==0.5.1
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+lazy-object-proxy==1.4.3
 Mako==1.1.0
 Markdown==3.1.1
 MarkupSafe==1.1.1
+mccabe==0.6.1
 oauth2==1.9.0.post1
 passlib==1.7.1
 psycopg2==2.8.2
+pylint==2.4.4
 python-dateutil==2.8.1
 python-dotenv==0.10.3
 python-editor==1.0.4
@@ -41,9 +48,10 @@ six==1.13.0
 speaklater==1.3
 SQLAlchemy==1.3.10
 text-unidecode==1.3
+typed-ast==1.4.1
 tzlocal==2.0.0
 Unidecode==1.1.1
-uWSGI==2.0.18
 visitor==0.1.3
 Werkzeug==0.16.0
+wrapt==1.11.2
 WTForms==2.2.1
